assets/static/css/graphene/style.css
/* ... */
.graphene-spacer-100 {
    margin-bottom: 100px;
}

.graphene-spacer-150 {
    margin-bottom: 150px;
}

.wordwrap {
    white-space: pre-wrap;      /* CSS3 */
    white-space: -moz-pre-wrap; /* Firefox */
    white-space: -pre-wrap;     /* Opera <7 */
    white-space: -o-pre-wrap;   /* Opera 7 */
    word-wrap: break-word;      /* IE */
}

.typewriter {
    color: #000;
}

.header-container, .content-container, .footer-container {
    margin: 0;
}

.header-container {
    position: fixed;
    width: 100%;
    min-height: 80px;
    background-color: #000;
    z-index: 1000;
}

.header-container .navbar {
    padding: 10px 5px;
    z-index: 1001;
}

.header-container .navbar-brand {
    padding: 0 0 0 23px;
}

.header-container .navbar-brand img {
    width: 150px;
    max-height: 36px;
    object-fit: contain;
}

.header-container .navbar-nav .nav-link {
    opacity: 0.78;
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 16px;
    font-weight: 600;
    font-style: normal;
    font-stretch: normal;
    letter-spacing: normal;
    text-align: center;
    color: #ffffff;
    text-transform: uppercase;
    padding-top: 24px;
    padding-left: 23px;
    padding-right: 23px;
}

@media only screen and (min-width: 1200px) and (max-width: 2200px) {
    .section.col-xl-6 {
        -ms-flex: 0 0 1150px;
        flex: 0 0 1150px;
        max-width: 1150px;
    }

    .section.offset-xl-3 {
        margin-left: auto;
        margin-right: auto;
    }
}

.page-container .navbar-nav .nav-link:hover {
    color: #ffffff;
    opacity: 0.78;
}

.page-container .navbar-nav .nav-link:focus {
    color: #ffffff;
    opacity: 0.78;
}

.header-container .navbar-nav .nav-link .nav-link-underline {
    width: 0;
    opacity: 0.78;
    background-color: #fff;
    height: 2px;
    line-height: 2px;
}

.header-container .navbar-nav .nav-link.selected {
}

.header-container .navbar-nav .nav-link.selected .nav-link-underline {
    display: block;
    opacity: 0.78;
    background-color: #2194c3;
    width: 100%;
}

.navbar-dark .navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.9)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
}

.navbar-dark .navbar-toggler {
    color: #2194c3;
    border-color: transparent;
}

.navbar-dark .navbar-toggler:focus {
    outline: none;
}

.navbar-dark .navbar-toggler .material-icons {
    font-size: 28px;
}

.navbar-dark .navbar-toggler .graphene-open {
    display: none;
}

.navbar-dark .navbar-toggler.collapsed .graphene-open {
    display: initial;
}

.navbar-dark .navbar-toggler .graphene-close {
    display: initial;
}

.navbar-dark .navbar-toggler.collapsed .graphene-close {
    display: none;
}

.navbar-toggler {
    z-index: 150;
}
.navbar-toggler.collapsed {
    z-index: 0;
}

.content-container {
    margin-top: 150px;
}

.page-template-landing .title {
    font-size: 40px;
    line-height: 42px;
    font-family: 'Source Sans Pro';
    font-weight: 900;
}

.page-template-landing .section-summary .background {
    position: relative;
    height: 320px;
}

.page-template-landing .section-summary .background img {
    height: 100%;
    position: absolute;
}

.page-template-landing .description {
    font-size: 16px;
    font-weight: 300;
    line-height: 18px;
}

.page-template-landing .section {
    margin-top: 150px;
}

.page-template-landing .section-summary {
    min-height: 330px;
}

.page-template-landing .section-summary .description {
    font-family: 'Source Sans Pro';
    font-size: 46px;
    font-weight: 900;
    line-height: 55px;
    display: none;
}

.page-template-landing .section-summary .developed-by {
    margin-top: 10px;
    opacity: 0.84;
    font-size: 16px;
    font-weight: 300;
    line-height: 18px;
}

@keyframes fadeIn {
    from { opacity: 0 }
    to { opacity: 1 }
}

.page-template-landing .section-description .title {
    font-size: 46px;
    line-height: 60px;
}

.page-template-landing .section-sgx-integration .variant-title {
    font-size: 20px;
    line-height: 42px;
    margin-bottom: 30px;
    font-weight: 700;
}

.page-template-landing .section-sgx-integration > .variant .variant-schema img.variant-desktop {
    max-width: 100%;
}

.page-template-landing .section-sgx-integration > .variant .variant-schema img.variant-desktop {
    height: 180px;
}

.page-template-landing .section-sgx-integration > .variant ~ .variant .variant-schema img.variant-desktop {
    height: 160px;
}

.page-template-landing .section-sgx-integration .variant-description {
    font-size: 16px;
    line-height: 18px;
}

.section-why-graphene-matters .partner img {
    width: 60%;
    border: none;
}
#timeline-wrapper {
    overflow: hidden;
    position: relative;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.timeline {
    position: relative;
    white-space: nowrap;

    display: flex;
    overflow: hidden;
    -webkit-overflow-scrolling: touch;
}

.timeline .material-icons {
    font-size: 60px;
}

.timeline-pointer {
    display: inline-block;
    margin-left: 41px;
    height: 41px;
    line-height: 300px;
    border-right: 1px solid #2194c3;
}

.timeline-period {
    display: inline-block;
    position: relative;
}

.timeline-period-start-label {
    font-family: 'Source Sans Pro';
    position: absolute;
    font-size: 90px;
    font-weight: 900;
    opacity: 0.3;
    color: #108ec5;
    transform: translateX(-50%);
    bottom: 200px;
}

.timeline-event-label {
    position: absolute;
    font-size: 15px;
    font-weight: 900;
    white-space: normal;
    left: 10px;
    right: 10px;
    bottom: 100px;
    z-index: 100;
}

.timeline-event-label.high {
    bottom: 170px;
}
/* ... */

